--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -172,6 +172,7 @@ input.cart-drawer__input--qty {
 	text-align: center;
 	padding-top: .5rem;
 	padding-bottom: .5rem;
+	//border-radius: var(--button-border-radius);
 }
 
 input.cart-drawer__input--property {
