--- a/scss/components/component-card-products.scss
+++ b/scss/components/component-card-products.scss
@@ -1,5 +1,10 @@
-/* component-badge */
 
+.overflow-hidden-notify #MainContent {
+    position: relative;
+    z-index: 11;
+}
+
+/* component-badge */
 .badge {
     background-color: var(--color-reverse);
     border: .1rem solid var(--color-black);
