--- a/snippets/icons-svg.liquid
+++ b/snippets/icons-svg.liquid
@@ -1,4 +1,32 @@
 {% case icons %}
+    {% when 'shirt' %}
+        <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            focusable="false"
+            role="presentation"
+            class="icon icon-shirt"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+        >
+            <path fill="currentColor" d="M13.5 19h-8c-0.827 0-1.5-0.673-1.5-1.5v-9.306l-2.342 0.781c-0.262 0.087-0.545-0.054-0.632-0.316l-1-3c-0.079-0.236 0.028-0.494 0.251-0.605l6-3c0.155-0.077 0.339-0.069 0.486 0.022s0.237 0.252 0.237 0.425c0 1.378 1.122 2.5 2.5 2.5s2.5-1.122 2.5-2.5c0-0.173 0.090-0.334 0.237-0.425s0.331-0.099 0.486-0.022l6 3c0.223 0.111 0.329 0.369 0.251 0.605l-1 3c-0.087 0.262-0.37 0.404-0.632 0.316l-2.342-0.781v9.306c0 0.827-0.673 1.5-1.5 1.5zM4.5 7c0.104 0 0.206 0.032 0.292 0.094 0.13 0.094 0.208 0.245 0.208 0.406v10c0 0.276 0.224 0.5 0.5 0.5h8c0.276 0 0.5-0.224 0.5-0.5v-10c0-0.161 0.077-0.312 0.208-0.406s0.298-0.12 0.45-0.069l2.526 0.842 0.705-2.114-4.973-2.487c-0.351 1.562-1.749 2.733-3.415 2.733s-3.065-1.171-3.415-2.733l-4.973 2.487 0.705 2.114 2.526-0.842c0.052-0.017 0.105-0.026 0.158-0.026z"></path>
+        </svg>
+    {% when 'gift' %}
+        <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            focusable="false"
+            role="presentation"
+            class="icon icon-gift"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+        >
+            <path fill="currentColor" d="M18.5 5h-3.001c0.315-0.418 0.501-0.938 0.501-1.5 0-1.378-1.122-2.5-2.5-2.5-1.39 0-2.556 1.101-3.127 1.758-0.346 0.397-0.644 0.823-0.873 1.235-0.229-0.412-0.527-0.837-0.873-1.235-0.571-0.656-1.737-1.758-3.127-1.758-1.378 0-2.5 1.122-2.5 2.5 0 0.562 0.187 1.082 0.501 1.5h-3.001c-0.276 0-0.5 0.224-0.5 0.5v3c0 0.276 0.224 0.5 0.5 0.5h0.5v9.5c0 0.827 0.673 1.5 1.5 1.5h14c0.827 0 1.5-0.673 1.5-1.5v-9.5h0.5c0.276 0 0.5-0.224 0.5-0.5v-3c0-0.276-0.224-0.5-0.5-0.5zM11.127 3.414c0.782-0.899 1.647-1.414 2.373-1.414 0.827 0 1.5 0.673 1.5 1.5s-0.673 1.5-1.5 1.5h-3.378c0.173-0.442 0.523-1.032 1.005-1.586zM11 19h-3v-13h3v13zM4 3.5c0-0.827 0.673-1.5 1.5-1.5 0.726 0 1.591 0.515 2.373 1.414 0.482 0.554 0.832 1.144 1.005 1.586h-3.378c-0.827 0-1.5-0.673-1.5-1.5zM1 6h6v2h-6v-2zM2 18.5v-9.5h5v10h-4.5c-0.276 0-0.5-0.224-0.5-0.5zM17 18.5c0 0.276-0.224 0.5-0.5 0.5h-4.5v-10h5v9.5zM18 8h-6v-2h6v2z"></path>
+        </svg>
     {% when 'car' %}
         <svg
             version="1.1"
